--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,3 @@
-
 </div>
 </div>
 <script>
@@ -18,5 +17,14 @@
   document.getElementById('breadcrumbs').innerHTML = breadcrumbs;
 </script>
 <script src="/fancyindex/js/history.js"></script>
+<footer>
+  <div id="copyright&themeinfo" class="page-footer" style="position:absolute;bottom:12px;left:40%;color:gray;font-size:x-small;">
+    <a href="#" onclick="MGJS.goTop();return false;"> 回到顶部 </a> | 
+    <a href="https://github.com/TheInsomniac/Nginx-Fancyindex-Theme" target="_blank">Them by GitHub</a> | 
+    <a href="https://blog.wongcw.cn" target="_blank"> 
+      <script>document.write("Copyright © wangcw 2000-" + new Date().getFullYear() + " All Rights Reserved")
+      </script> </a>
+  </div>
+</footer>
 </body>
 </html>
