修复issue内的历史问题
修改自定义README

--- a/header.html
+++ b/header.html
@@ -7,7 +7,7 @@
   <title>Files...</title>
   <link rel="stylesheet" href="/fancyindex/css/fancyindex.css">
   <script>
-    window.document.title = window.location.pathname;
+    window.document.title = decodeURI(window.location.pathname);
   </script>
 </head>
 <body>
