--- a/footer.html
+++ b/footer.html
@@ -1,12 +1,12 @@
 </div>
 </div>
 <script>
-  var loc = window.location.pathname;
+  var loc =decodeURI(window.location.pathname);
   var segments = loc.split('/');
   var breadcrumbs = '';
   var currentPath = '/';
   for (var i=0; i<segments.length; i++) {
-    if (segments[i] !== '') {
+    if (segments[i] != '') {
       currentPath += segments[i] + '/';
       breadcrumbs += '<a href="' +  currentPath + '">' + window.unescape(segments[i]) + '<\/a>';
     } else if (segments.length -1 !== i) {
