--- a/footer.html
+++ b/footer.html
@@ -21,7 +21,7 @@
   <div id="copyright&themeinfo" class="page-footer" style="position:absolute;bottom:12px;left:40%;color:gray;font-size:x-small;">
     <a href="#" onclick="MGJS.goTop();return false;"> 回到顶部 </a> | 
     <a href="https://github.com/TheInsomniac/Nginx-Fancyindex-Theme" target="_blank">Them by GitHub</a> | 
-    <a href="https://blog.wongcw.cn" target="_blank"> 
+    <a href="https://www.wongcw.cn" target="_blank"> 
       <script>document.write("Copyright © wangcw 2020-" + new Date().getFullYear() + " All Rights Reserved")
       </script> </a>
   </div>
